// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders an input text field 1`] = `
<DocumentFragment>
  <div
    class="relative "
  >
    <label
      class="  pointer-events-none font-body duration-300 absolute block text-md font-light text-night-black dark:text-max-white top-0 left-0  "
    >
      Birthday
    </label>
    <input
      class="  max-w-full  text-night-black dark:text-max-white font-body bg-transparent border-b-2 focus:outline-none border-night-black dark:border-max-white"
      type="text"
    />
  </div>
</DocumentFragment>
`;

exports[`renders an input text field with a confirm AND error state if both are available 1`] = `
<DocumentFragment>
  <div
    class="relative "
  >
    <label
      class="  pointer-events-none font-body duration-300 absolute block text-md font-light text-night-black dark:text-max-white top-0 left-0  "
    >
      Birthday
    </label>
    <input
      class="  max-w-full  text-night-black dark:text-max-white font-body bg-transparent border-b-2 focus:outline-none border-night-black dark:border-max-white"
      type="text"
    />
    <div
      class="absolute pointer-events-none left-0 top-0 -translate-x-full"
    >
      ❌
    </div>
    <div
      class="absolute pointer-events-none left-0 top-0 -translate-x-full"
    >
      ✅
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders an input text field with a confirm state 1`] = `
<DocumentFragment>
  <div
    class="relative "
  >
    <label
      class="  pointer-events-none font-body duration-300 absolute block text-md font-light text-night-black dark:text-max-white top-0 left-0  "
    >
      Birthday
    </label>
    <input
      class="  max-w-full  text-night-black dark:text-max-white font-body bg-transparent border-b-2 focus:outline-none border-night-black dark:border-max-white"
      type="text"
    />
    <div
      class="absolute pointer-events-none left-0 top-0 -translate-x-full"
    >
      ✅
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders an input text field with an error state 1`] = `
<DocumentFragment>
  <div
    class="relative "
  >
    <label
      class="  pointer-events-none font-body duration-300 absolute block text-md font-light text-night-black dark:text-max-white top-0 left-0  "
    >
      Birthday
    </label>
    <input
      class="  max-w-full  text-night-black dark:text-max-white font-body bg-transparent border-b-2 focus:outline-none border-night-black dark:border-max-white"
      type="text"
    />
    <div
      class="absolute pointer-events-none left-0 top-0 -translate-x-full"
    >
      ❌
    </div>
  </div>
</DocumentFragment>
`;
